hphp/hack/test/typecheck/records/record_inheritance_not_abstract.php
<?hh

record A {
}

record B extends A {
}
